<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFDFD">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/title_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/album"/>

    <TextView
        android:id="@+id/title_album_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintTop_toBottomOf="@id/title_album"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:text="@string/album_name"/>

    <TextView
        android:id="@+id/title_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintTop_toBottomOf="@id/title_album_name"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/artist"/>

    <TextView
        android:id="@+id/title_artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="6dp"
        app:layout_constraintTop_toBottomOf="@id/title_album_name"
        app:layout_constraintStart_toEndOf="@id/title_artist"
        android:textColor="@color/black"
        tools:text="@string/artist"/>

    <TextView
        android:id="@+id/title_published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintTop_toBottomOf="@id/title_artist"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/published"/>

    <TextView
        android:id="@+id/title_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/title_artist"
        app:layout_constraintStart_toEndOf="@id/title_published"
        tools:text="@string/genre"/>

    <ImageButton
        android:id="@+id/title_play_button"
        android:layout_width="49dp"
        android:layout_height="49dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_genre"
        android:layout_marginTop="18dp"
        android:layout_marginStart="6dp"
        android:src="@drawable/ic_title_play"
        android:background="@drawable/play_button_background"
        android:backgroundTint="@color/black"
        app:tint="@color/yellow" />

    <TextView
        android:id="@+id/emptyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_list"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracklist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/player_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_play_button"
        tools:listitem="@layout/tracklist_card" />

</androidx.constraintlayout.widget.ConstraintLayout>
